--- a/Network-Subsystem/config.ini
+++ b/Network-Subsystem/config.ini
@@ -1,9 +1,10 @@
 [Peers]
 DefaultPeers[] = ws://localhost:8002
-DefaultPeers[] = ws://localhost:8003
 
 [ServerConfig]
 Port = 8001
 CacheRefresh = 900000
 CacheTime = 43200000
 CacheMaxSize = 100
+DBConnectionString = 'mongodb://127.0.0.1:27017/RM'
+PercentReceiptsSave = 20
