--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "ini": "^3.0.1",
-    "medea": "^1.0.3",
+    "mongoose": "^6.9.0",
     "os": "^0.1.2",
     "ws": "^8.11.0"
   }
