ShareReceipt message functioning properly

--- a/Network-Subsystem/config.ini
+++ b/Network-Subsystem/config.ini
@@ -1,5 +1,4 @@
 [Peers]
-DefaultPeers[] = ws://localhost:8002
 
 [ServerConfig]
 Port = 8001
@@ -8,3 +7,4 @@ CacheTime = 43200000
 CacheMaxSize = 100
 DBConnectionString = 'mongodb://127.0.0.1:27017/RM'
 PercentReceiptsSave = 20
+TTL = 5
