--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Developer-DUCS/ReputationMachine#readme",
   "dependencies": {
+    "child_process": "^1.0.2",
     "express": "^4.18.2",
     "ini": "^3.0.1",
     "mongoose": "^6.9.2",
