Start network API

--- a/Network-Subsystem/Testing Configs/config1.ini
+++ b/Network-Subsystem/Testing Configs/config1.ini
@@ -1,7 +1,8 @@
 [Peers]
 
 [ServerConfig]
-Port = 8001
+NodeCommunicationPort = 8001
+APIPort = 8081
 CacheRefresh = 900000
 CacheTime = 43200000
 CacheMaxSize = 100
