--- a/Network-Subsystem/config.ini
+++ b/Network-Subsystem/config.ini
@@ -1,7 +1,9 @@
 [Peers]
+DefaulPeers[] = "ws://127.0.0.1:8001"
 
 [ServerConfig]
-Port = 8001
+NodeCommunicationPort = 8000
+APIPort = 8080
 CacheRefresh = 900000
 CacheTime = 43200000
 CacheMaxSize = 100
