--- a/Network-Subsystem/Testing Configs/config2.ini
+++ b/Network-Subsystem/Testing Configs/config2.ini
@@ -1,9 +1,11 @@
 [Peers]
-DefaultPeers[] = ws://localhost:8001
 
 [ServerConfig]
-Port = 8002
+NodeCommunicationPort = 8002
+APIPort = 8082
 CacheRefresh = 900000
 CacheTime = 43200000
 CacheMaxSize = 100
 DBConnectionString = 'mongodb://127.0.0.1:27017/RM'
+PercentReceiptsSave = 20
+TTL = 5
