--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/Developer-DUCS/ReputationMachine#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "express": "^4.18.2",
     "ini": "^3.0.1",
     "mongoose": "^6.9.2",
     "os": "^0.1.2",
+    "uuid": "^9.0.0",
     "ws": "^8.11.0"
   }
 }
