--- a/Network-Subsystem/Testing Configs/config1.ini
+++ b/Network-Subsystem/Testing Configs/config1.ini
@@ -8,5 +8,7 @@ CacheRefresh = 900000
 CacheTime = 43200000
 CacheMaxSize = 100
 DBConnectionString = 'mongodb://127.0.0.1:27017/RM'
+
+[MessageConfig]
+DefaultTTL = 5
 PercentReceiptsSave = 20
-TTL = 5
