--- a/Network-Subsystem/Testing Configs/config1.ini
+++ b/Network-Subsystem/Testing Configs/config1.ini
@@ -1,12 +1,13 @@
 [Peers]
-DefaulPeers[] = "ws://127.0.0.1:8001"
+DefaultPeers[] = ws://127.0.0.1:8000
 
 [ServerConfig]
-NodeCommunicationPort = 8000
-APIPort = 8080
+NodeCommunicationPort = 8001
+APIPort = 8081
 CacheRefresh = 900000
 CacheTime = 43200000
 CacheMaxSize = 100
+DBConnectionString = 'mongodb://127.0.0.1:27017/RM'
 
 [MessageConfig]
 DefaultTTL = 5
