Network integration work

--- a/Network-Subsystem/config.ini
+++ b/Network-Subsystem/config.ini
@@ -1,5 +1,5 @@
 [Peers]
-DefaulPeers[] = "ws://127.0.0.1:8001"
+DefaultPeers[] = "ws://127.0.0.1:8001"
 
 [ServerConfig]
 NodeCommunicationPort = 8000
